@@ -18,4 +18,4 @@ if exist "%TOOLBOX_HOME%clientToolBox.jar" goto exists
 
 rem @echo on
 rem expects java to be on the path of the machine, which is the standard on a windows installation
-java %JAVA_OPT% -cp "%TOOLBOX_HOME%clientToolBox.jar;%TOOLBOX_HOME%endorsed/*" org.ejbca.ui.cli.ClientToolBox %args%
+java %JAVA_OPT% --add-exports=jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED -Dlog4j1.compatibility=true -cp "%TOOLBOX_HOME%clientToolBox.jar;%TOOLBOX_HOME%endorsed/*" org.ejbca.ui.cli.ClientToolBox %args%
